2013-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bytecode.c (struct byte_stack): Remove `constants' when unused.

2013-03-10  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (display_tool_bar_line, redisplay_tool_bar)
	(redisplay_internal, set_cursor_from_row, try_window)
	(try_window_id, dump_glyph_row, extend_face_to_end_of_line)
	(display_line, notice_overwritten_cursor)
	(mouse_face_from_buffer_pos, note_mouse_highlight):
	Use MATRIX_ROW_DISPLAYS_TEXT_P.
	(note_mouse_highlight): Use MATRIX_ROW_GLYPH_START.
	(mouse_face_from_string_pos, fast_find_string_pos):
	Use MATRIX_ROW_VPOS.

	* xfns.c (Fx_show_tip): Use MATRIX_ROW_DISPLAYS_TEXT_P.

	* w32fns.c (Fx_show_tip): Use MATRIX_ROW_DISPLAYS_TEXT_P.

	* xdisp.c (try_cursor_movement): Use MATRIX_ROW and
	MATRIX_MODE_LINE_ROW.

	* dispnew.c (update_window): Use MATRIX_ROW and MATRIX_MODE_LINE_ROW.

2013-03-10  handa  <handa@gnu.org>

	* lisp.h (adjust_after_replace): Extern it.

	* coding.c (detect_coding): Cound the heading ASCII bytes in the
	case of detection for coding_category_utf_8_auto.
	(decode_coding_gap) [not CODING_DISABLE_ASCII_OPTIMIZATION]:
	Skip decoding if all bytes are ASCII.

	* insdel.c (adjust_after_replace): Make it public.  New arg
	text_at_gap_tail.
	(adjust_after_insert): Call adjust_after_replace with the new arg
	value 0.

2013-03-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.h (EVENT_START, EVENT_END, POSN_WINDOW, POSN_POSN)
	(POSN_WINDOW_POSN, POSN_TIMESTAMP): Be careful since events may come
	from Elisp via unread-command-events.

	* keyboard.c (access_keymap_keyremap): Accept nil return value from
	functions to mean "no change".

2013-03-08  Paul Eggert  <eggert@cs.ucla.edu>

	region-cache.c, scroll.c, search.c: Use bool for booleans.
	* lisp.h (compile_pattern):
	* scroll.c (do_scrolling, do_direct_scrolling):
	* search.c (struct regexp_cache, compile_pattern_1)
	(compile_pattern, string_match_1, search_command)